--- a/style.css
+++ b/style.css
@@ -939,7 +939,7 @@ height: 14px;
     }
      
     .header-img {
-      background-image: url(/fondo-pagina/aads.jpeg);
+      background-image: url(fondo-pagina/aads.jpeg);
      background-repeat: no-repeat;
      background-position: center center;
      
