--- a/style.css
+++ b/style.css
@@ -881,7 +881,7 @@ height: 14px;
     .icono-bag svg{
         width: 20px;
         height: 20px;
-        
+        margin-left: 55px;
     }
 
     .menu .navbar{
